--- a/bibliography.bib
+++ b/bibliography.bib
@@ -13,7 +13,7 @@
 	title = {Linear Algebra Done Right},
 	date = {2015},
 	series = {Undergraduate Texts in Mathematics},
-	publisher = {Springer}
+	publisher = {Springer-Verlag}
 }
 
 @online{Conrad,
@@ -38,6 +38,15 @@
 	data={1953-06-28},
 	url={http://www.ams.org/journals/proc/1954-005-02/S0002-9939-1954-0060558-3/S0002-9939-1954-0060558-3.pdf}
 }
+
+@book{Lam,
+	author = {T.~Y.~Lam},
+	title = {A Course in Noncommutative Rings},
+	date = {1991},
+	series = {Graduate Texts in Mathematics},
+	publisher = {Springer-Verlag}
+}
+
 
 @book{Lay,
 	author = {David C.~Lay},
